Integration update with new pybkb fusion and knowledgebase.

--- a/core/data_driver.config
+++ b/core/data_driver.config
@@ -8,3 +8,4 @@ pathway_file,/home/public/data/ncats/data_drop_02-11-2020/pathways_analysis.csv
 reactome_g2r_file,/home/public/data/ncats/reactome/r2g_names_k1.csv
 reactome_p2p_file,/home/public/data/ncats/reactome/p2p_k1.csv
 working_dir,/tmp/
+cpp_fuse_option,False
