Added initial biothings explorer integration.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/PyBKB"]
 	path = submodules/PyBKB
 	url = /home/public/git/modules/PyBKB.git
+[submodule "submodules/biothings_explorer"]
+	path = submodules/biothings_explorer
+	url = git@github.com:biothings/biothings_explorer.git
