Changed submodule to https request.

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = /home/public/git/modules/PyBKB.git
 [submodule "submodules/biothings_explorer"]
 	path = submodules/biothings_explorer
-	url = git@github.com:biothings/biothings_explorer.git
+	url = https://github.com/biothings/biothings_explorer.git 
