updated data_handler and patientBKFProcessor to incorporate gene and drug curies.

--- a/chp/data_handler.config
+++ b/chp/data_handler.config
@@ -7,6 +7,8 @@ mutation_data_file,/home/public/data/ncats/data_drop_03-04-2020/wxs.csv
 pathway_file,/home/public/data/ncats/data_drop_02-11-2020/pathways_analysis.csv
 reactome_g2r_file,/home/public/data/ncats/reactome/r2g_names_k1.csv
 reactome_p2p_file,/home/public/data/ncats/reactome/p2p_k1.csv
-working_dir,/home/ghyde/bkb-pathway-provider/core/AXLEBKB/
+working_dir,/home/ghyde/bkb-pathway-provider/chp/test/
 patient_holdout,/home/public/data/ncats/data_drop_03-04-2020/holdOutPatients.csv
+gene_curies,/home/public/data/ncats/curie_dir/gene_curie_map.csv
+drug_curies,/home/public/data/ncats/curie_dir/drug_curie_map.csv
 cpp_fuse_option,False
